--- a/03 - Neural Network Classification/code/01 -  NN Classification.ipynb
+++ b/03 - Neural Network Classification/code/01 -  NN Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c1d822e",
+   "id": "cd12b3a6",
    "metadata": {},
    "source": [
     "# Neural Network Classification"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6d75ce29",
+   "id": "3e7e2ce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "06efe2c0",
+   "id": "e053bac8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9c73e8a0",
+   "id": "1c1651ae",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ba23e3a8",
+   "id": "6ae0ba12",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a09d8817",
+   "id": "1bc9b587",
    "metadata": {},
    "source": [
     "**Visualize the data**"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5d4521e1",
+   "id": "a5bf5bf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3f338390",
+   "id": "a9ea1c34",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "3fc418f3",
+   "id": "e973d739",
    "metadata": {},
    "outputs": [
     {
@@ -268,12 +268,366 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dea3bb00",
+   "cell_type": "markdown",
+   "id": "ddd43aee",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Input and Output Shape**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "84861027",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((1000, 2), (1000,))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check the shape\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e472dd",
+   "metadata": {},
+   "source": [
+    "**Modelling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "cb12b47c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "32/32 [==============================] - 1s 3ms/step - loss: 4.6496 - accuracy: 0.4620\n",
+      "Epoch 2/5\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 3.0907 - accuracy: 0.5050\n",
+      "Epoch 3/5\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.7709 - accuracy: 0.4990\n",
+      "Epoch 4/5\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7145 - accuracy: 0.4950\n",
+      "Epoch 5/5\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.7003 - accuracy: 0.4970\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x19e72f3f490>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# 1. Create a model\n",
+    "model_1 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(1, input_shape=(2,))\n",
+    "])\n",
+    "\n",
+    "# 2. Compile the model\n",
+    "model_1.compile(loss=tf.keras.losses.BinaryCrossentropy(), \n",
+    "                optimizer=tf.keras.optimizers.SGD(),\n",
+    "                metrics=['accuracy'])\n",
+    "\n",
+    "# 3. Fit the model\n",
+    "model_1.fit(X, y, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d27520d",
+   "metadata": {},
+   "source": [
+    "> Accuracy of `49.7%` as shown above denote that the model is guessing. Hence, improve the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cdf0743",
+   "metadata": {},
+   "source": [
+    "**Improve the model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "9d08f3d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "32/32 [==============================] - 1s 2ms/step - loss: 6.3800 - accuracy: 0.4870\n",
+      "Epoch 2/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.3179 - accuracy: 0.4860\n",
+      "Epoch 3/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.2950 - accuracy: 0.4870\n",
+      "Epoch 4/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.3005 - accuracy: 0.4860\n",
+      "Epoch 5/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.2868 - accuracy: 0.4870\n",
+      "Epoch 6/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.2314 - accuracy: 0.4850\n",
+      "Epoch 7/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.2040 - accuracy: 0.4850\n",
+      "Epoch 8/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.2006 - accuracy: 0.4850\n",
+      "Epoch 9/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.1991 - accuracy: 0.4850\n",
+      "Epoch 10/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.1978 - accuracy: 0.4860\n",
+      "Epoch 11/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.1596 - accuracy: 0.4900\n",
+      "Epoch 12/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.1418 - accuracy: 0.4830\n",
+      "Epoch 13/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.1272 - accuracy: 0.4860\n",
+      "Epoch 14/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 6.1257 - accuracy: 0.4860\n",
+      "Epoch 15/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0871 - accuracy: 0.4850\n",
+      "Epoch 16/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0767 - accuracy: 0.4860\n",
+      "Epoch 17/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0748 - accuracy: 0.4860\n",
+      "Epoch 18/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0737 - accuracy: 0.4860\n",
+      "Epoch 19/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0727 - accuracy: 0.4860\n",
+      "Epoch 20/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0716 - accuracy: 0.4860\n",
+      "Epoch 21/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0706 - accuracy: 0.4860\n",
+      "Epoch 22/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0617 - accuracy: 0.4860\n",
+      "Epoch 23/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0577 - accuracy: 0.4840\n",
+      "Epoch 24/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0486 - accuracy: 0.4850\n",
+      "Epoch 25/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0457 - accuracy: 0.4860\n",
+      "Epoch 26/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0437 - accuracy: 0.4860\n",
+      "Epoch 27/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0423 - accuracy: 0.4840\n",
+      "Epoch 28/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0411 - accuracy: 0.4840\n",
+      "Epoch 29/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 6.0402 - accuracy: 0.4840\n",
+      "Epoch 30/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 6.0381 - accuracy: 0.4850\n",
+      "Epoch 31/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.9145 - accuracy: 0.4800\n",
+      "Epoch 32/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.9204 - accuracy: 0.4780\n",
+      "Epoch 33/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.9102 - accuracy: 0.4780\n",
+      "Epoch 34/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.8750 - accuracy: 0.4800\n",
+      "Epoch 35/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.7565 - accuracy: 0.4740\n",
+      "Epoch 36/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.7219 - accuracy: 0.4720\n",
+      "Epoch 37/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.7210 - accuracy: 0.4710\n",
+      "Epoch 38/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.7195 - accuracy: 0.4720\n",
+      "Epoch 39/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.7183 - accuracy: 0.4720\n",
+      "Epoch 40/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 5.7175 - accuracy: 0.4720\n",
+      "Epoch 41/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.7195 - accuracy: 0.4710\n",
+      "Epoch 42/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.6406 - accuracy: 0.4720\n",
+      "Epoch 43/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.6047 - accuracy: 0.4740\n",
+      "Epoch 44/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5740 - accuracy: 0.4740\n",
+      "Epoch 45/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5486 - accuracy: 0.4750\n",
+      "Epoch 46/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5434 - accuracy: 0.4740\n",
+      "Epoch 47/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5199 - accuracy: 0.4740\n",
+      "Epoch 48/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5158 - accuracy: 0.4740\n",
+      "Epoch 49/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5049 - accuracy: 0.4740\n",
+      "Epoch 50/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.5002 - accuracy: 0.4750\n",
+      "Epoch 51/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.4620 - accuracy: 0.4760\n",
+      "Epoch 52/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.4415 - accuracy: 0.4760\n",
+      "Epoch 53/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 5.3651 - accuracy: 0.4740\n",
+      "Epoch 54/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 5.2884 - accuracy: 0.4740\n",
+      "Epoch 55/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 5.2502 - accuracy: 0.4750\n",
+      "Epoch 56/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.2024 - accuracy: 0.4740\n",
+      "Epoch 57/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 5.1491 - accuracy: 0.4750\n",
+      "Epoch 58/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8930 - accuracy: 0.4700\n",
+      "Epoch 59/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8685 - accuracy: 0.4700\n",
+      "Epoch 60/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8636 - accuracy: 0.4690\n",
+      "Epoch 61/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8612 - accuracy: 0.4710\n",
+      "Epoch 62/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8503 - accuracy: 0.4690\n",
+      "Epoch 63/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8344 - accuracy: 0.4720\n",
+      "Epoch 64/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8394 - accuracy: 0.4710\n",
+      "Epoch 65/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8368 - accuracy: 0.4700\n",
+      "Epoch 66/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8348 - accuracy: 0.4700\n",
+      "Epoch 67/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8548 - accuracy: 0.4650\n",
+      "Epoch 68/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.9053 - accuracy: 0.4500\n",
+      "Epoch 69/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9069 - accuracy: 0.4490\n",
+      "Epoch 70/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9066 - accuracy: 0.4490\n",
+      "Epoch 71/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.9062 - accuracy: 0.4490\n",
+      "Epoch 72/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.9059 - accuracy: 0.4490\n",
+      "Epoch 73/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9056 - accuracy: 0.4490\n",
+      "Epoch 74/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9053 - accuracy: 0.4490\n",
+      "Epoch 75/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9050 - accuracy: 0.4490\n",
+      "Epoch 76/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.9047 - accuracy: 0.4490\n",
+      "Epoch 77/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9044 - accuracy: 0.4480\n",
+      "Epoch 78/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9042 - accuracy: 0.4480\n",
+      "Epoch 79/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9039 - accuracy: 0.4480\n",
+      "Epoch 80/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9036 - accuracy: 0.4480\n",
+      "Epoch 81/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9033 - accuracy: 0.4480\n",
+      "Epoch 82/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9031 - accuracy: 0.4490\n",
+      "Epoch 83/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9028 - accuracy: 0.4490\n",
+      "Epoch 84/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9025 - accuracy: 0.4490\n",
+      "Epoch 85/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9022 - accuracy: 0.4470\n",
+      "Epoch 86/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9020 - accuracy: 0.4480\n",
+      "Epoch 87/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9018 - accuracy: 0.4480\n",
+      "Epoch 88/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9016 - accuracy: 0.4480\n",
+      "Epoch 89/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.9013 - accuracy: 0.4480\n",
+      "Epoch 90/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8938 - accuracy: 0.4480\n",
+      "Epoch 91/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8672 - accuracy: 0.4490\n",
+      "Epoch 92/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8663 - accuracy: 0.4490\n",
+      "Epoch 93/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8656 - accuracy: 0.4490\n",
+      "Epoch 94/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8474 - accuracy: 0.4490\n",
+      "Epoch 95/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8359 - accuracy: 0.4490\n",
+      "Epoch 96/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8328 - accuracy: 0.4490\n",
+      "Epoch 97/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8312 - accuracy: 0.4480\n",
+      "Epoch 98/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.8302 - accuracy: 0.4480\n",
+      "Epoch 99/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8205 - accuracy: 0.4490\n",
+      "Epoch 100/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 4.8185 - accuracy: 0.4500\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x19e7af35d30>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# add another layer - making (2) layers & optimizer (adam)\n",
+    "\n",
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# 1. Create the model\n",
+    "model_2 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(2, input_shape=(2,)),\n",
+    "    tf.keras.layers.Dense(1)\n",
+    "])\n",
+    "\n",
+    "# 2. Compile the model\n",
+    "model_2.compile(loss=\"binary_crossentropy\", \n",
+    "                optimizer='adam', metrics=['accuracy'])\n",
+    "\n",
+    "# 3. Fit the model\n",
+    "model_2.fit(X, y, epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72e45536",
+   "metadata": {},
+   "source": [
+    "**Mod"
+   ]
   }
  ],
  "metadata": {
