--- a/03 - Neural Network Classification/code/01 -  NN Classification.ipynb
+++ b/03 - Neural Network Classification/code/01 -  NN Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd12b3a6",
+   "id": "c397c0f0",
    "metadata": {},
    "source": [
     "# Neural Network Classification"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3e7e2ce3",
+   "id": "3b4ea22f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e053bac8",
+   "id": "507f38c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1c1651ae",
+   "id": "99297ad5",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6ae0ba12",
+   "id": "a5a9a43f",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc9b587",
+   "id": "f2be2a02",
    "metadata": {},
    "source": [
     "**Visualize the data**"
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a5bf5bf5",
+   "id": "2165a286",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a9ea1c34",
+   "id": "4fb99bda",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e973d739",
+   "id": "46ff8c52",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd43aee",
+   "id": "ecb42b4b",
    "metadata": {},
    "source": [
     "**Input and Output Shape**"
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "84861027",
+   "id": "99587d68",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08e472dd",
+   "id": "0950069f",
    "metadata": {},
    "source": [
     "**Modelling**"
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cb12b47c",
+   "id": "bec500f9",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d27520d",
+   "id": "b93244fe",
    "metadata": {},
    "source": [
     "> Accuracy of `49.7%` as shown above denote that the model is guessing. Hence, improve the model."
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdf0743",
+   "id": "7f3943a9",
    "metadata": {},
    "source": [
     "**Improve the model**"
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9d08f3d6",
+   "id": "ccc4f3dc",
    "metadata": {},
    "outputs": [
     {
@@ -623,10 +623,275 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e45536",
+   "id": "89d240ca",
    "metadata": {},
    "source": [
-    "**Mod"
+    "**Model 3**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f88e62f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n",
+      "32/32 [==============================] - 1s 3ms/step - loss: 4.9201 - accuracy: 0.5130\n",
+      "Epoch 2/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 4.3370 - accuracy: 0.5450\n",
+      "Epoch 3/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 2.0236 - accuracy: 0.4960\n",
+      "Epoch 4/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7087 - accuracy: 0.4870\n",
+      "Epoch 5/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6985 - accuracy: 0.4730\n",
+      "Epoch 6/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6963 - accuracy: 0.4920\n",
+      "Epoch 7/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7006 - accuracy: 0.4790\n",
+      "Epoch 8/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6969 - accuracy: 0.4770\n",
+      "Epoch 9/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6966 - accuracy: 0.5130\n",
+      "Epoch 10/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6946 - accuracy: 0.4930\n",
+      "Epoch 11/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7013 - accuracy: 0.4540\n",
+      "Epoch 12/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6998 - accuracy: 0.4830\n",
+      "Epoch 13/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6971 - accuracy: 0.4890\n",
+      "Epoch 14/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6980 - accuracy: 0.5010\n",
+      "Epoch 15/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6980 - accuracy: 0.4810\n",
+      "Epoch 16/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6957 - accuracy: 0.4880\n",
+      "Epoch 17/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7020 - accuracy: 0.4920\n",
+      "Epoch 18/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6974 - accuracy: 0.4680\n",
+      "Epoch 19/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6979 - accuracy: 0.5220\n",
+      "Epoch 20/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6976 - accuracy: 0.4750\n",
+      "Epoch 21/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6975 - accuracy: 0.4980\n",
+      "Epoch 22/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6987 - accuracy: 0.5000\n",
+      "Epoch 23/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6954 - accuracy: 0.5030\n",
+      "Epoch 24/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6986 - accuracy: 0.4870\n",
+      "Epoch 25/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.7040 - accuracy: 0.4900\n",
+      "Epoch 26/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6988 - accuracy: 0.4680\n",
+      "Epoch 27/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6941 - accuracy: 0.5190\n",
+      "Epoch 28/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6997 - accuracy: 0.4730\n",
+      "Epoch 29/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6985 - accuracy: 0.4710\n",
+      "Epoch 30/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7012 - accuracy: 0.4540\n",
+      "Epoch 31/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6967 - accuracy: 0.4970\n",
+      "Epoch 32/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6978 - accuracy: 0.4490\n",
+      "Epoch 33/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6967 - accuracy: 0.4980\n",
+      "Epoch 34/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6998 - accuracy: 0.4670\n",
+      "Epoch 35/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6986 - accuracy: 0.4740\n",
+      "Epoch 36/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6951 - accuracy: 0.4930\n",
+      "Epoch 37/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6966 - accuracy: 0.4660\n",
+      "Epoch 38/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6989 - accuracy: 0.4820\n",
+      "Epoch 39/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6953 - accuracy: 0.5050\n",
+      "Epoch 40/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6964 - accuracy: 0.4860\n",
+      "Epoch 41/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6989 - accuracy: 0.5110\n",
+      "Epoch 42/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7004 - accuracy: 0.4640\n",
+      "Epoch 43/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6964 - accuracy: 0.5050\n",
+      "Epoch 44/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6936 - accuracy: 0.5150\n",
+      "Epoch 45/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7037 - accuracy: 0.4660\n",
+      "Epoch 46/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6955 - accuracy: 0.4690\n",
+      "Epoch 47/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6971 - accuracy: 0.5100\n",
+      "Epoch 48/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.7033 - accuracy: 0.4780\n",
+      "Epoch 49/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6966 - accuracy: 0.5170\n",
+      "Epoch 50/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6965 - accuracy: 0.4900\n",
+      "Epoch 51/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6986 - accuracy: 0.4750\n",
+      "Epoch 52/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6965 - accuracy: 0.5010\n",
+      "Epoch 53/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6986 - accuracy: 0.4710\n",
+      "Epoch 54/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6965 - accuracy: 0.5060\n",
+      "Epoch 55/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6971 - accuracy: 0.5180\n",
+      "Epoch 56/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6968 - accuracy: 0.4840\n",
+      "Epoch 57/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6974 - accuracy: 0.4800\n",
+      "Epoch 58/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7004 - accuracy: 0.4950\n",
+      "Epoch 59/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7009 - accuracy: 0.5040\n",
+      "Epoch 60/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.7008 - accuracy: 0.4930\n",
+      "Epoch 61/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6999 - accuracy: 0.4980\n",
+      "Epoch 62/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6937 - accuracy: 0.5260\n",
+      "Epoch 63/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6946 - accuracy: 0.4840\n",
+      "Epoch 64/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6954 - accuracy: 0.5020\n",
+      "Epoch 65/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6967 - accuracy: 0.4890\n",
+      "Epoch 66/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6953 - accuracy: 0.5140\n",
+      "Epoch 67/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6963 - accuracy: 0.4870\n",
+      "Epoch 68/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6949 - accuracy: 0.4710\n",
+      "Epoch 69/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6948 - accuracy: 0.5020\n",
+      "Epoch 70/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6957 - accuracy: 0.4460\n",
+      "Epoch 71/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6947 - accuracy: 0.4920\n",
+      "Epoch 72/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6967 - accuracy: 0.4800\n",
+      "Epoch 73/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6954 - accuracy: 0.4810\n",
+      "Epoch 74/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6946 - accuracy: 0.5120\n",
+      "Epoch 75/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6966 - accuracy: 0.4730\n",
+      "Epoch 76/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6949 - accuracy: 0.5050\n",
+      "Epoch 77/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6962 - accuracy: 0.5070\n",
+      "Epoch 78/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6945 - accuracy: 0.5110\n",
+      "Epoch 79/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6988 - accuracy: 0.4690\n",
+      "Epoch 80/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6960 - accuracy: 0.4980\n",
+      "Epoch 81/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6956 - accuracy: 0.4910\n",
+      "Epoch 82/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6965 - accuracy: 0.4820\n",
+      "Epoch 83/100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6952 - accuracy: 0.5030\n",
+      "Epoch 84/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6951 - accuracy: 0.4990\n",
+      "Epoch 85/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6937 - accuracy: 0.4840\n",
+      "Epoch 86/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6956 - accuracy: 0.5120\n",
+      "Epoch 87/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6958 - accuracy: 0.4740\n",
+      "Epoch 88/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6950 - accuracy: 0.4650\n",
+      "Epoch 89/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6949 - accuracy: 0.4740\n",
+      "Epoch 90/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6971 - accuracy: 0.5080\n",
+      "Epoch 91/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6970 - accuracy: 0.4760\n",
+      "Epoch 92/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6945 - accuracy: 0.5060\n",
+      "Epoch 93/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6960 - accuracy: 0.5040\n",
+      "Epoch 94/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6961 - accuracy: 0.4950\n",
+      "Epoch 95/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6942 - accuracy: 0.5080\n",
+      "Epoch 96/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6963 - accuracy: 0.4630\n",
+      "Epoch 97/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6948 - accuracy: 0.4880\n",
+      "Epoch 98/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6958 - accuracy: 0.4640\n",
+      "Epoch 99/100\n",
+      "32/32 [==============================] - 0s 3ms/step - loss: 0.6964 - accuracy: 0.5040\n",
+      "Epoch 100/100\n",
+      "32/32 [==============================] - 0s 2ms/step - loss: 0.6946 - accuracy: 0.5000\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x19e7c1d2f40>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# 1. Create the model\n",
+    "model_3 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(100, input_shape=(2,)),\n",
+    "    tf.keras.layers.Dense(10),\n",
+    "    tf.keras.layers.Dense(1)\n",
+    "])\n",
+    "\n",
+    "# 2. Compile the model\n",
+    "model_3.compile(loss=\"binary_crossentropy\", \n",
+    "                optimizer=tf.keras.optimizers.Adam(learning_rate=0.01),\n",
+    "                metrics=['accuracy'])\n",
+    "\n",
+    "# 3. Fit the model\n",
+    "model_3.fit(X, y, epochs=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b4b5a24",
+   "metadata": {},
+   "source": [
+    "> Regardless of the modification, the model still perform badly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6c53b60",
+   "metadata": {},
+   "source": [
+    "**Visuali"
    ]
   }
  ],
