added non-linear image

--- a/03 - Neural Network Classification/code/01 -  NN Classification.ipynb
+++ b/03 - Neural Network Classification/code/01 -  NN Classification.ipynb
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69506ad",
+   "id": "107181fb",
    "metadata": {},
    "source": [
     "> **Extra resources online:** \n",
@@ -2014,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d045ba9",
+   "id": "63d46749",
    "metadata": {},
    "source": [
     "**NOTE:**\n",
@@ -2024,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8e22f1eb",
+   "id": "26bcfc15",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f2bf7ab",
+   "id": "b1f06f3e",
    "metadata": {},
    "source": [
     "> It is wrong to compile our regression model problem with `binary cross entropy`. Since it is a regression problem, use `loss=\"mae\"` `metrics=['mae']` or any other regression losses."
@@ -2078,7 +2078,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7e8d883a",
+   "id": "64f4f0a6",
    "metadata": {},
    "outputs": [
     {
@@ -2099,7 +2099,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d83ff177",
+   "id": "50302296",
    "metadata": {},
    "outputs": [
     {
@@ -2348,7 +2348,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9a6f2cdb",
+   "id": "37e39457",
    "metadata": {},
    "outputs": [
     {
@@ -2384,7 +2384,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6e6b0776",
+   "id": "f2585db0",
    "metadata": {},
    "outputs": [
     {
@@ -2403,12 +2403,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a90deb0f",
+   "cell_type": "markdown",
+   "id": "1a763a44",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Non - Linearity. Click <a href=\"./02 - Non-linearity.ipynb\">here</a> for source code."
+   ]
   }
  ],
  "metadata": {
