--- a/03 - Neural Network Classification/code/02 - Non-linearity.ipynb
+++ b/03 - Neural Network Classification/code/02 - Non-linearity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "592dc26e",
+   "id": "76b64abe",
    "metadata": {},
    "source": [
     "# Non-linearity"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3d67f591",
+   "id": "76874644",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "523f0b19",
+   "id": "cd8b630c",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a7900c09",
+   "id": "49b3fc66",
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d74cbe1f",
+   "id": "3c3ccb06",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50ee5be4",
+   "id": "fa01ec67",
    "metadata": {},
    "source": [
     "**Model 1**"
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d526459",
+   "id": "2f58f4f5",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a4a65707",
+   "id": "2168d822",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f3105a93",
+   "id": "4722ac52",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39f6ab63",
+   "id": "ac77e153",
    "metadata": {},
    "source": [
     "**Model 2**\n",
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f61bd7a0",
+   "id": "6742e7ad",
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "51d185f8",
+   "id": "01a13385",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84439adf",
+   "id": "e0fcf27a",
    "metadata": {},
    "source": [
     "**Model 3**\n",
@@ -762,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2e9a233c",
+   "id": "3831ac8d",
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "38c6ded4",
+   "id": "beb94891",
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c074ef7b",
+   "id": "83d0f30d",
    "metadata": {},
    "outputs": [
     {
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2cd8c79",
+   "id": "19c36c50",
    "metadata": {},
    "source": [
     "**Model 4**\n",
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "027f15ad",
+   "id": "4f3d8db3",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bce9d79a",
+   "id": "b86e46da",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "a78993f7",
+   "id": "d8b1188b",
    "metadata": {},
    "outputs": [
     {
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf369354",
+   "id": "4d4f9ce4",
    "metadata": {},
    "source": [
     "> Wowww!!! **Model 4** is the best model for the data. "
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f252b7a",
+   "id": "8da3528e",
    "metadata": {},
    "source": [
     "### Replicate `Sigmoid` function"
@@ -1384,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "2886f9b4",
+   "id": "63b8c035",
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1409,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ddcd1c51",
+   "id": "0870444f",
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb105ec9",
+   "id": "db6265e1",
    "metadata": {},
    "source": [
     "$$\\sigma (z) = \\dfrac{1}{1 + e^{-z}}$$"
@@ -1438,7 +1438,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "64e01a4a",
+   "id": "9a609a32",
    "metadata": {},
    "outputs": [
     {
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "971961ee",
+   "id": "0d6d5a98",
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d05fa03",
+   "id": "82f8e566",
    "metadata": {},
    "source": [
     "### Replicate `ReLU` function"
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9151f56",
+   "id": "a8478d1d",
    "metadata": {},
    "source": [
     "$$\n",
@@ -1522,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "10b5f4ec",
+   "id": "724c9a30",
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1d78f047",
+   "id": "42fdde67",
    "metadata": {},
    "outputs": [
     {
@@ -1579,7 +1579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4965e303",
+   "id": "f1571ac4",
    "metadata": {},
    "source": [
     "## Evaluating and improving our classification.\n",
@@ -1589,7 +1589,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "20f786ae",
+   "id": "5fb90ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1601,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f3bbf00b",
+   "id": "faae52ba",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f215ac",
+   "id": "0154d51f",
    "metadata": {},
    "source": [
     "**Model 5**\n",
@@ -1632,7 +1632,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e58b233e",
+   "id": "1a36d219",
    "metadata": {},
    "outputs": [
     {
@@ -1766,7 +1766,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "54fb29a3",
+   "id": "27044db7",
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e4861170",
+   "id": "51113eb8",
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52427b31",
+   "id": "24520ba3",
    "metadata": {},
    "source": [
     "## Plot the loss (or training) curves\n",
@@ -1844,7 +1844,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "558b4eb1",
+   "id": "af01f755",
    "metadata": {},
    "outputs": [
     {
@@ -2193,7 +2193,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "dc5a1d9c",
+   "id": "2cbb1ae1",
    "metadata": {},
    "outputs": [
     {
@@ -2225,19 +2225,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b969f90d",
+   "id": "0214b7a8",
    "metadata": {},
    "source": [
     "**Note:** For many problem, the loss function going down (decreasing) means the model is improving (the predictions it's making are getting closer to the ground truth labels). But the accuracy increases as the loss function decreases."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f98d13e0",
+   "cell_type": "markdown",
+   "id": "793d2aae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<hr>\n",
+    "\n",
+    "## Finding the best learning rate\n",
+    "\n",
+    "To find the ideal learning rate (the learning rate where the loss decreases the most during training), you the following steps:\n",
+    "\n",
+    "1. A learning rate **Callback**: You can think of a callback as an extra piece of functionality you can add to the model while training.\n",
+    "2. Another model (we could use the same one as above)\n",
+    "3. A modified loss curves plot."
+   ]
   }
  ],
  "metadata": {
