--- a/03 - Neural Network Classification/code/02 - Non-linearity.ipynb
+++ b/03 - Neural Network Classification/code/02 - Non-linearity.ipynb
@@ -2851,12 +2851,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01182ca1",
+   "cell_type": "markdown",
+   "id": "a0a99fdb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Classification Evaluation Methods. Click <a href=\"./03 -  NN Classification Evaluation.ipynb\">here</a> "
+   ]
   }
  ],
  "metadata": {
