--- a/03 - Neural Network Classification/code/03 -  NN Classification Evaluation.ipynb
+++ b/03 - Neural Network Classification/code/03 -  NN Classification Evaluation.ipynb
@@ -5,13 +5,28 @@
    "id": "42f59516",
    "metadata": {},
    "source": [
-    "# Classification Evaluation Methods"
+    "# Classification Evaluation Methods\n",
+    "<hr>\n",
+    "\n",
+    "* **Accuracy:** Default metric for classification problems.\n",
+    "* **Precision:** Higher precision leads to less false positive.\n",
+    "* **Recall:** Higher recall leads to less false negative.\n",
+    "* **F1-score:** Combination of precision and recall.\n",
+    "* **Confusion matrix:** When comparing predictions with truth labels."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9223edb9",
+   "metadata": {},
+   "source": [
+    "![Eval](../images/eval.JPG)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "379cc0fd",
+   "id": "89284e7c",
    "metadata": {},
    "outputs": [],
    "source": []
