--- a/03 - Neural Network Classification/code/04 - Multiclass Classification.ipynb
+++ b/03 - Neural Network Classification/code/04 - Multiclass Classification.ipynb
@@ -2,20 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c396bdb6",
+   "id": "7d96230a",
    "metadata": {},
    "source": [
-    "# Multi Class Neural Network\n",
-    "<hr>"
+    "# Multiclass Neural Network\n",
+    "<hr>\n",
+    "\n",
+    "To practice multi-class classification, we are going to build a neural network to classify images of different items of clothings."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8347f44",
+   "id": "42053643",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.datasets import fashion_mnist\n",
+    "\n",
+    "# The data has already been sorted into training and testing\n",
+    "(X_train)"
+   ]
   }
  ],
  "metadata": {
