--- a/03 - Neural Network Classification/code/04 - Multiclass Classification.ipynb
+++ b/03 - Neural Network Classification/code/04 - Multiclass Classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a2f83c1",
+   "id": "c175f170",
    "metadata": {},
    "source": [
     "# Multiclass Neural Network\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1508b8a5",
+   "id": "72f765f2",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d558c37a",
+   "id": "1867df69",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794747e3",
+   "id": "e9fd74c1",
    "metadata": {},
    "source": [
     "> The labels are: **0 -> T-shirt/top, 1 -> Trouser, 2 -> Pullover, 3 -> Dress, 4 -> Coat, 5 -> Sandal, 6 -> Shirt, 7 -> Sneaker, 8 -> Bag, 9 -> Ankle boot**"
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "617134d7",
+   "id": "5c220ea2",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5c4eaa24",
+   "id": "5b9d5426",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d79e2710",
+   "id": "ee25ab5c",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e863c114",
+   "id": "61aedf7b",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "39c384ae",
+   "id": "a47c1c61",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e88e0491",
+   "id": "07797eb1",
    "metadata": {},
    "outputs": [
     {
@@ -269,9 +269,319 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a64cae4c",
+   "metadata": {},
+   "source": [
+    "## Building a Multi-Class Model\n",
+    "\n",
+    "- Input Shape: 28 x 28 (the shape of one image)\n",
+    "- Output Shape: 10 (one per class of clothing)\n",
+    "- Loss function: `tf.keras.losses.CategoricalCrossentropy()`\n",
+    "    - If your labels are one-hot encoded, use CategoricalCrossentropy()\n",
+    "    - If your labels are integer form use SparseCategoricalCrossentropy()\n",
+    "- Output layer activation: `softmax`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2d042ab3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28, 28)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the input shape\n",
+    "X_train[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "d5585954",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Output shape (i.e) how many classes\n",
+    "len(class_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d32bdf0",
+   "metadata": {},
+   "source": [
+    "**Flatten**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "907c983a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, 784)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Data needs to be flattened\n",
+    "flatten_model = tf.keras.Sequential([tf.keras.layers.Flatten(input_shape=(28,28))])\n",
+    "flatten_model.output_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3fdf76e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "784"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "28 * 28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "51354967",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 2.4497 - accuracy: 0.0995 - val_loss: 2.3028 - val_accuracy: 0.0999\n",
+      "Epoch 2/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.3029 - accuracy: 0.0981 - val_loss: 2.3027 - val_accuracy: 0.0999\n",
+      "Epoch 3/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.3027 - accuracy: 0.1002 - val_loss: 2.3027 - val_accuracy: 0.1000\n",
+      "Epoch 4/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.3026 - accuracy: 0.0977 - val_loss: 2.3026 - val_accuracy: 0.1000\n",
+      "Epoch 5/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.3028 - accuracy: 0.0976 - val_loss: 2.3026 - val_accuracy: 0.1000\n",
+      "Epoch 6/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.3021 - accuracy: 0.0993 - val_loss: 2.2816 - val_accuracy: 0.1000\n",
+      "Epoch 7/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.3014 - accuracy: 0.0989 - val_loss: 2.2711 - val_accuracy: 0.1178\n",
+      "Epoch 8/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.8377 - accuracy: 0.2518 - val_loss: 1.6612 - val_accuracy: 0.3315\n",
+      "Epoch 9/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.5711 - accuracy: 0.3346 - val_loss: 1.5425 - val_accuracy: 0.3275\n",
+      "Epoch 10/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.4890 - accuracy: 0.3496 - val_loss: 1.4691 - val_accuracy: 0.3425\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# 1. Create Model\n",
+    "model_1 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=(28,28)),\n",
+    "    tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(4, activation='relu'),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# 2. Compile the model\n",
+    "model_1.compile(loss=tf.keras.losses.SparseCategoricalCrossentropy(), \n",
+    "              optimizer=tf.keras.optimizers.Adam(), \n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# 3. Fit the model\n",
+    "non_norm_history = model_1.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a39056f7",
+   "metadata": {},
+   "source": [
+    "> **CategoricalCrossentropy** is used when the labels are `hot-encoded` if they are`integers` please use **SparseCategoricalCrossentropy**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14d5fb4d",
+   "metadata": {},
+   "source": [
+    "**One hot the training labels (y_train)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "61f54a4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(10, 10), dtype=float32, numpy=\n",
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 1., 0., 0.],\n",
+       "       [0., 0., 1., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 1., 0., 0., 0., 0.]], dtype=float32)>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.one_hot(y_train[:10], depth=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "33df20b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "1875/1875 [==============================] - 4s 2ms/step - loss: 2.2677 - accuracy: 0.1265 - val_loss: 2.1286 - val_accuracy: 0.1888\n",
+      "Epoch 2/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 2.0928 - accuracy: 0.1946 - val_loss: 2.0175 - val_accuracy: 0.2284\n",
+      "Epoch 3/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.7142 - accuracy: 0.2988 - val_loss: 1.6473 - val_accuracy: 0.3320\n",
+      "Epoch 4/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.5072 - accuracy: 0.3803 - val_loss: 1.4597 - val_accuracy: 0.3947\n",
+      "Epoch 5/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.4061 - accuracy: 0.4027 - val_loss: 1.4394 - val_accuracy: 0.4170\n",
+      "Epoch 6/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.3538 - accuracy: 0.4132 - val_loss: 1.3558 - val_accuracy: 0.4165\n",
+      "Epoch 7/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.3559 - accuracy: 0.4162 - val_loss: 1.3450 - val_accuracy: 0.4245\n",
+      "Epoch 8/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.3201 - accuracy: 0.4218 - val_loss: 1.3619 - val_accuracy: 0.4143\n",
+      "Epoch 9/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.3167 - accuracy: 0.4270 - val_loss: 1.3457 - val_accuracy: 0.4349\n",
+      "Epoch 10/10\n",
+      "1875/1875 [==============================] - 3s 2ms/step - loss: 1.2969 - accuracy: 0.4360 - val_loss: 1.3217 - val_accuracy: 0.4427\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# 1. Create Model\n",
+    "model_2 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=(28,28)),\n",
+    "    tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(4, activation='relu'),\n",
+    "    tf.keras.layers.Dense(10, activation='softmax')\n",
+    "])\n",
+    "\n",
+    "# 2. Compile the model\n",
+    "model_2.compile(loss=tf.keras.losses.CategoricalCrossentropy(), \n",
+    "              optimizer=tf.keras.optimizers.Adam(), \n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "# 3. Fit the model\n",
+    "non_norm_history = model_2.fit(X_train, tf.one_hot(y_train, depth=10), \n",
+    "                             epochs=10, validation_data=(X_test, tf.one_hot(y_test, depth=10)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f24e9a1",
+   "metadata": {},
+   "source": [
+    "**NOTE:** The training and validation accuracy of 43% and 44% is still better than guessing. Had it been the model was guess, it would be around **10%**. $100 / 10 = 10$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "1f34d99a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_7\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " flatten_5 (Flatten)         (None, 784)               0         \n",
+      "                                                                 \n",
+      " dense_18 (Dense)            (None, 4)                 3140      \n",
+      "                                                                 \n",
+      " dense_19 (Dense)            (None, 4)                 20        \n",
+      "                                                                 \n",
+      " dense_20 (Dense)            (None, 10)                50        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 3210 (12.54 KB)\n",
+      "Trainable params: 3210 (12.54 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the model summary\n",
+    "model_2.summary()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21f3e470",
+   "id": "7b0d427c",
    "metadata": {},
    "outputs": [],
    "source": []
