--- a/04 - Convolutional Neural Network/code/02 - Non CNN for Image.ipynb
+++ b/04 - Convolutional Neural Network/code/02 - Non CNN for Image.ipynb
@@ -1,9 +1,132 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "093b5a42",
+   "metadata": {},
+   "source": [
+    "# Non CNN Model for Image data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8e46538a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "153102a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ImageDataGenerator = tf.keras.preprocessing.image.ImageDataGenerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ae890256",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1500 images belonging to 2 classes.\n",
+      "Found 500 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preprocess the data\n",
+    "train_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "\n",
+    "# Set path to the data directory\n",
+    "train_dir = \"../pizza_steak/train\"\n",
+    "test_dir = \"../pizza_steak/test\"\n",
+    "\n",
+    "# Import data from directory\n",
+    "train_data = train_datagen.flow_from_directory(train_dir, target_size=(224, 224), class_mode=\"binary\", seed=42)\n",
+    "test_data = test_datagen.flow_from_directory(test_dir, target_size=(224, 224), class_mode=\"binary\", seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9918c10c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.preprocessing.image.DirectoryIterator at 0x2af836fff70>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4c93fa29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "47/47 [==============================] - 20s 387ms/step - loss: 0.8169 - accuracy: 0.5187 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+      "Epoch 2/5\n",
+      "47/47 [==============================] - 18s 390ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+      "Epoch 3/5\n",
+      "47/47 [==============================] - 16s 345ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+      "Epoch 4/5\n",
+      "47/47 [==============================] - 19s 402ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n",
+      "Epoch 5/5\n",
+      "47/47 [==============================] - 16s 340ms/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.5000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set random seed\n",
+    "tf.random.set_seed(42)\n",
+    "\n",
+    "# Create a model to replicate tensorflow playground\n",
+    "model_1 = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Flatten(input_shape=(224, 224, 3)),\n",
+    "    tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(4, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model_1.compile(loss=\"binary_crossentropy\", \n",
+    "                optimizer=\"adam\", metrics=['accuracy'])\n",
+    "\n",
+    "# Fit the model\n",
+    "history_1 = model_1.fit(train_data, epochs=5, \n",
+    "                        steps_per_epoch=len(train_data), \n",
+    "                        validation_data=test_data, validation_steps=len(test_data))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e92173b3",
+   "id": "80299e71",
    "metadata": {},
    "outputs": [],
    "source": []
