--- a/04 - Convolutional Neural Network/code/03 - Breaking down CNN model.ipynb
+++ b/04 - Convolutional Neural Network/code/03 - Breaking down CNN model.ipynb
@@ -1,12 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "464bf072",
+   "cell_type": "markdown",
+   "id": "67bc3d54",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Breaking down CNN model\n",
+    "\n",
+    "## Binary Classification Explanation\n",
+    "- Become one with the data (visualize, visualize, visualize)\n",
+    "- Preprocess the data (prepared it for our model, by scaling - normalization)\n",
+    "- Create a model (start with a baseline)\n",
+    "- Fit the model\n",
+    "- Evaluate the model\n",
+    "- Adjust different parameters and improve the model (try to beat our baseline)\n",
+    "- Repeat until satisfied "
+   ]
   }
  ],
  "metadata": {
