--- a/04 - Convolutional Neural Network/code/03 - Breaking down CNN model.ipynb
+++ b/04 - Convolutional Neural Network/code/03 - Breaking down CNN model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36076d3b",
+   "id": "1457fc97",
    "metadata": {},
    "source": [
     "# Breaking down CNN model\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16bab418",
+   "id": "c8be18eb",
    "metadata": {},
    "source": [
     "### 1. Become one with the data"
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "10ce2e52",
+   "id": "47563435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "91084ede",
+   "id": "12193c97",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "74a5f5f8",
+   "id": "4e72a861",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8d05fde1",
+   "id": "caf43110",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c07c1042",
+   "id": "28ddf3e6",
    "metadata": {},
    "source": [
     "### 2. Preprocess the data"
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0bef5530",
+   "id": "c0137105",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "14bab056",
+   "id": "97c00522",
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "803a096f",
+   "id": "a9955571",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5818d6d8",
+   "id": "ddac49b3",
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "df907fe5",
+   "id": "070db248",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "a4f2c2b9",
+   "id": "342eb2b5",
    "metadata": {},
    "outputs": [
     {
@@ -371,19 +371,62 @@
   },
   {
    "cell_type": "markdown",
-   "id": "749ed9ff",
+   "id": "70878dfd",
    "metadata": {},
    "source": [
-    "### 3. Create a CNN model"
+    "### 3. Create a CNN model (starting with baseline)\n",
+    "\n",
+    "**Note:** In deep learning, there is almost an infinite amount of architecture you could create. So one of the best way to get started is to start with something simple and see if it works on your and then introduce complexity as required (e.g look at which current model is performing best in the field for your problem)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "318ffc4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make the creating of our model a little easier\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Conv2D, MaxPool2D, Activation, Input\n",
+    "from tensorflow.keras import Sequential"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d6496328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create the model (this will be the baseline, a 3 hidden layer convolutional neural network)\n",
+    "model_1 = Sequential([\n",
+    "    Input(shape=(224, 224, 3)), # input layer \n",
+    "    Conv2D(filters=10, kernel_size=3, strides=1, padding=\"valid\", activation=\"relu\"),\n",
+    "    Conv2D(10, 3, activation=\"relu\"),\n",
+    "    Conv2D(10, 3, activation=\"relu\"),\n",
+    "    Flatten(),\n",
+    "    Dense(1, activation=\"sigmoid\") # output layer\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228e18ae",
+   "id": "4bc9083b",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a151f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_1.compile()"
+   ]
   }
  ],
  "metadata": {
